uf_ulog_macro/tests/ui/fail_registry_non_unit_variant.stderr
error: ULogRegistry requires unit enum variants
 --> tests/ui/fail_registry_non_unit_variant.rs:3:10
  |
3 |     Gyro { value: u8 },
  |          ^^^^^^^^^^^^^
