uf_ulog_macro/tests/ui/fail_registry_non_unit_variant.rs
#[derive(uf_ulog_macro::ULogRegistry)]
enum Topics {
    Gyro { value: u8 },
}

fn main() {}
